--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <gradient android:angle="180" android:centerColor="#72479b" android:endColor="#806897" android:startColor="#5c2294" />
+            <gradient android:angle="90"  android:startColor="#5c2294"  android:centerColor="#72479b" android:endColor="#806897" />
             <corners android:bottomLeftRadius="50dp" android:bottomRightRadius="50dp" />
         </shape>
     </item>
